Update java.java
final version